identity-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
      - name: identity
        image: denis227/scales-identity
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: identity-srv
spec:
  type: ClusterIP
  selector:
    app: identity
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: identity-port
